Валідатар - табліцы, copyright

--- a/nazvy/src/org/alex73/osm/utils/velocity.properties
+++ b/nazvy/src/org/alex73/osm/utils/velocity.properties
@@ -4,3 +4,4 @@ resource.loader = class
 class.resource.loader.description = Velocity Classpath Resource Loader
 class.resource.loader.class = org.apache.velocity.runtime.resource.loader.ClasspathResourceLoader
 runtime.references.strict = true
+runtime.introspector.uberspect = org.alex73.osm.utils.velocity.PublicFieldUberspect
