--- a/nazvy/.classpath
+++ b/nazvy/.classpath
@@ -13,5 +13,6 @@
 	<classpathentry kind="lib" path="lib/commons-collections-3.2.1.jar"/>
 	<classpathentry kind="lib" path="lib/osmosis-osm-binary-0.43.1.jar"/>
 	<classpathentry kind="lib" path="lib/protobuf-java-2.4.1.jar"/>
+	<classpathentry kind="lib" path="lib/mybatis-3.2.3.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
