--- a/nazvy/env.properties
+++ b/nazvy/env.properties
@@ -6,4 +6,4 @@ po.source.dir=$HOME/gits/OsmBelarus-Databases/Nazvy_vulic.OmegaT/source/
 po.target.dir=$HOME/gits/OsmBelarus-Databases/Nazvy_vulic.OmegaT/target/
 tmx.output.dir=$HOME/gits/OsmBelarus-Databases/Nazvy_vulic.OmegaT/tm/
 dav=$HOME/gits/OsmBelarus-Databases/Nazvy_nasielenych_punktau/list.csv
-out.dir=/var/www/db/
+out.dir=/var/www/osm/
