Выпраўленьні зборкі мапаў osmand

--- a/nazvy/.project
+++ b/nazvy/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>OsmBelarus-Validators-nazvy</name>
+	<name>OsmBelarus-Tools-nazvy</name>
 	<comment></comment>
 	<projects>
 	</projects>
