Магчымасьць не паказваць некаторыя слупкі ў перакладах назваў

--- a/nazvy/env.properties
+++ b/nazvy/env.properties
@@ -7,3 +7,11 @@ po.target.dir=$HOME/gits/OsmBelarus-Databases/Nazvy_vulic.OmegaT/target/
 tmx.output.dir=$HOME/gits/OsmBelarus-Databases/Nazvy_vulic.OmegaT/tm/
 dav=$HOME/gits/OsmBelarus-Databases/Nazvy_nasielenych_punktau/list.csv
 out.dir=/var/www/osm/
+
+nazvy_vulic.name=all
+nazvy_vulic.name_ru=change
+nazvy_vulic.name_be=all
+nazvy_vulic.int_name=change
+#all - show all
+#change - only changed from exist one
+#skip - show none
