Праверка населеных пунктаў

--- a/nazvy/env.properties
+++ b/nazvy/env.properties
@@ -15,3 +15,7 @@ nazvy_vulic.int_name=change
 #all - show all
 #change - only changed from exist one
 #skip - show none
+
+nazvy_viosak.name_ru=skip
+nazvy_viosak.int_name=skip
+#skip - show none
