--- a/nazvy/env.properties
+++ b/nazvy/env.properties
@@ -9,9 +9,9 @@ dav=$HOME/gits/OsmBelarus-Databases/Nazvy_nasielenych_punktau/list.csv
 out.dir=/var/www/osm/
 
 nazvy_vulic.name=all
-nazvy_vulic.name_ru=change
+nazvy_vulic.name_ru=skip
 nazvy_vulic.name_be=all
-nazvy_vulic.int_name=change
+nazvy_vulic.int_name=skip
 #all - show all
 #change - only changed from exist one
 #skip - show none
