--- a/nazvy/.classpath
+++ b/nazvy/.classpath
@@ -9,13 +9,14 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/commons-lang-2.6.jar"/>
 	<classpathentry kind="lib" path="lib/commons-collections-3.2.1.jar"/>
-	<classpathentry kind="lib" path="lib/mybatis/mybatis-3.2.3.jar" sourcepath="/tmp/mybatis-3-mybatis-3.2.3.zip"/>
+	<classpathentry exported="true" kind="lib" path="lib/mybatis/mybatis-3.2.3.jar" sourcepath="/tmp/mybatis-3-mybatis-3.2.3.zip"/>
 	<classpathentry kind="lib" path="lib/pbf/osmosis-core-0.43.1.jar"/>
 	<classpathentry kind="lib" path="lib/pbf/osmosis-osm-binary-0.43.1.jar"/>
 	<classpathentry kind="lib" path="lib/pbf/osmosis-pbf2-0.43.1.jar"/>
 	<classpathentry kind="lib" path="lib/pbf/protobuf-java-2.4.1.jar"/>
-	<classpathentry kind="lib" path="lib/postgres/postgis.jar"/>
-	<classpathentry kind="lib" path="lib/postgres/postgresql-jdbc3-9.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/postgres/postgis.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/postgres/postgresql-jdbc3-9.1.jar"/>
 	<classpathentry kind="lib" path="lib/commons-compress-1.5.jar"/>
+	<classpathentry kind="lib" path="lib/jts-1.13.jar" sourcepath="/tmp/src"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
