--- a/nazvy/env.properties
+++ b/nazvy/env.properties
@@ -18,4 +18,7 @@ nazvy_vulic.int_name=skip
 
 nazvy_viosak.name_ru=skip
 nazvy_viosak.int_name=skip
+nazvy_viosak.addr_country=skip
+nazvy_viosak.addr_region=skip
+nazvy_viosak.addr_district=skip
 #skip - show none
