--- a/nazvy/env.properties
+++ b/nazvy/env.properties
@@ -16,8 +16,15 @@ nazvy_vulic.int_name=skip
 #change - only changed from exist one
 #skip - show none
 
+nazvy_viosak.place=show
+nazvy_viosak.name=show
+nazvy_viosak.name_be=show
 nazvy_viosak.name_ru=skip
 nazvy_viosak.int_name=skip
+nazvy_viosak.alt_name=show
+nazvy_viosak.alt_name_be=show
+nazvy_viosak.alt_name_ru=show
+nazvy_viosak.name_be-tarask=show
 nazvy_viosak.addr_country=skip
 nazvy_viosak.addr_region=skip
 nazvy_viosak.addr_district=skip
