--- a/nazvy/env.properties
+++ b/nazvy/env.properties
@@ -2,6 +2,10 @@ db.driver=org.postgresql.Driver
 db.url=jdbc:postgresql://localhost/osm
 db.username=osm
 db.password=
+#data.file=tmp/osm2.pbf
+data.file=tmp/belarus-updated.osm.pbf
+coutry.border.wkt=Belarus-79842.wkt
+
 po.source.dir=$HOME/gits/OsmBelarus-Databases/Nazvy_vulic.OmegaT/source/
 po.target.dir=$HOME/gits/OsmBelarus-Databases/Nazvy_vulic.OmegaT/target/
 tmx.output.dir=$HOME/gits/OsmBelarus-Databases/Nazvy_vulic.OmegaT/tm/
