--- a/nazvy/env.properties
+++ b/nazvy/env.properties
@@ -3,7 +3,7 @@ db.url=jdbc:postgresql://localhost/osm
 db.username=osm
 db.password=
 #data.file=tmp/osm2.pbf
-data.file=tmp/belarus-updated.osm.pbf
+data.file=tmp/belarus-updated.o5m
 coutry.border.wkt=Belarus-79842.wkt
 
 po.source.dir=$HOME/gits/OsmBelarus-Databases/Nazvy_vulic.OmegaT/source/
