--- a/nazvy/.classpath
+++ b/nazvy/.classpath
@@ -1,23 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/OSMemory"/>
 	<classpathentry kind="lib" path="lib/commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="lib/jts-1.13.jar"/>
+	<classpathentry kind="lib" path="lib/commons-compress-1.5.jar"/>
+	<classpathentry kind="lib" path="lib/commons-collections-3.2.1.jar"/>
+	<classpathentry kind="lib" path="lib/commons-lang-2.6.jar"/>
 	<classpathentry kind="lib" path="lib/jackson-annotations-2.2.3.jar"/>
 	<classpathentry kind="lib" path="lib/jackson-core-2.2.3.jar"/>
 	<classpathentry kind="lib" path="lib/jackson-databind-2.2.3.jar"/>
 	<classpathentry kind="lib" path="lib/velocity-1.6.3.jar"/>
-	<classpathentry kind="lib" path="lib/commons-lang-2.6.jar"/>
-	<classpathentry kind="lib" path="lib/commons-collections-3.2.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/mybatis/mybatis-3.2.3.jar" sourcepath="/tmp/mybatis-3-mybatis-3.2.3.zip"/>
-	<classpathentry kind="lib" path="lib/pbf/osmosis-core-0.43.1.jar"/>
-	<classpathentry kind="lib" path="lib/pbf/osmosis-osm-binary-0.43.1.jar"/>
-	<classpathentry kind="lib" path="lib/pbf/osmosis-pbf2-0.43.1.jar"/>
-	<classpathentry kind="lib" path="lib/pbf/protobuf-java-2.4.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/postgres/postgis.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/postgres/postgresql-jdbc3-9.1.jar"/>
-	<classpathentry kind="lib" path="lib/commons-compress-1.5.jar"/>
-	<classpathentry kind="lib" path="lib/jts-1.13.jar" sourcepath="/tmp/jts"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="lib/osmemory-1.0.jar" sourcepath="/OSMemory"/>
+	<classpathentry kind="lib" path="lib/osmemory-1.1.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
