--- a/nazvy/env.properties
+++ b/nazvy/env.properties
@@ -16,6 +16,7 @@ nazvy_vulic.int_name=skip
 #skip - show none
 
 nazvy_viosak.place=show
+nazvy_viosak.abandoned_place=show
 nazvy_viosak.name=show
 nazvy_viosak.name_be=show
 nazvy_viosak.name_ru=skip
