Удасканаленьні і валідатар чыгуначных станцый

--- a/nazvy/env.properties
+++ b/nazvy/env.properties
@@ -1,16 +1,18 @@
 data.file=/data/tmp/osm/belarus-updated.o5m
-coutry.border.wkt=Belarus-79842.wkt
 
 po.source.dir=$HOME/gits/OsmBelarus-Databases/Nazvy_vulic.OmegaT/source/
 po.target.dir=$HOME/gits/OsmBelarus-Databases/Nazvy_vulic.OmegaT/target/
 tmx.output.dir=$HOME/gits/OsmBelarus-Databases/Nazvy_vulic.OmegaT/tm/
-dav=$HOME/gits/OsmBelarus-Databases/Nazvy_nasielenych_punktau/list.csv
+dav=$HOME/gits/OsmBelarus-Databases/Daviedniki/
+
 out.dir=/var/www/osm/
 
 nazvy_vulic.name=all
 nazvy_vulic.name_ru=skip
 nazvy_vulic.name_be=all
 nazvy_vulic.int_name=skip
+nazvy_vulic.name_en=skip
+nazvy_vulic.name_by=all
 #all - show all
 #change - only changed from exist one
 #skip - show none
