OSM changesets export to git

--- a/nazvy/env.properties
+++ b/nazvy/env.properties
@@ -5,6 +5,8 @@ po.target.dir=$HOME/gits/OsmBelarus-Databases/Nazvy_vulic.OmegaT/target/
 tmx.output.dir=$HOME/gits/OsmBelarus-Databases/Nazvy_vulic.OmegaT/tm/
 dav=$HOME/gits/OsmBelarus-Databases/Daviedniki/
 
+monitoring.gitdir=$HOME/gits/OsmBelarus-Monitoring
+
 out.dir=/var/www/osm/
 
 nazvy_vulic.name=all
