--- a/nazvy/env.properties
+++ b/nazvy/env.properties
@@ -1,4 +1,5 @@
 data.file=/data/tmp/osm/belarus-updated.o5m
+data.cache=/data/tmp/osm-cache/
 
 po.source.dir=$HOME/gits/OsmBelarus-Databases/Nazvy_vulic.OmegaT/source/
 po.target.dir=$HOME/gits/OsmBelarus-Databases/Nazvy_vulic.OmegaT/target/
