--- a/nazvy/.classpath
+++ b/nazvy/.classpath
@@ -13,7 +13,8 @@
 	<classpathentry kind="lib" path="lib/jackson-databind-2.2.3.jar"/>
 	<classpathentry kind="lib" path="lib/velocity-1.6.3.jar"/>
 	<classpathentry kind="lib" path="lib/org.eclipse.jgit-3.5.2.201411120430-r.jar"/>
-	<classpathentry kind="lib" path="lib/osmemory-1.9.jar"/>
-	<classpathentry kind="lib" path="lib/gson-2.3.1.jar"/>
+	<classpathentry kind="lib" path="lib/gson-2.3.1.jar" sourcepath="lib/sources/gson-2.3.1-sources.jar"/>
+	<classpathentry kind="lib" path="lib/OmegaT.jar"/>
+	<classpathentry kind="lib" path="lib/osmemory-1.10.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
