Абнаўленьні валідатараў на angular

--- a/nazvy/env.properties
+++ b/nazvy/env.properties
@@ -25,8 +25,8 @@ nazvy_viosak.place=show
 nazvy_viosak.abandoned_place=show
 nazvy_viosak.name=show
 nazvy_viosak.name_be=show
-nazvy_viosak.name_ru=skip
-nazvy_viosak.int_name=skip
+nazvy_viosak.name_ru=show
+nazvy_viosak.int_name=show
 nazvy_viosak.alt_name=show
 nazvy_viosak.alt_name_be=show
 nazvy_viosak.alt_name_ru=show
