Дадатковая валідацыя раёнаў

--- a/nazvy/env.properties
+++ b/nazvy/env.properties
@@ -12,10 +12,10 @@ monitoring.gitdir=$HOME/gits/OsmBelarus-Monitoring
 out.dir=/var/www/osm/
 
 nazvy_vulic.name=all
-nazvy_vulic.name_ru=skip
+nazvy_vulic.name_ru=all
 nazvy_vulic.name_be=all
-nazvy_vulic.int_name=skip
-nazvy_vulic.name_en=skip
+nazvy_vulic.int_name=all
+nazvy_vulic.name_en=all
 nazvy_vulic.name_by=all
 #all - show all
 #change - only changed from exist one
@@ -31,7 +31,8 @@ nazvy_viosak.alt_name=show
 nazvy_viosak.alt_name_be=show
 nazvy_viosak.alt_name_ru=show
 nazvy_viosak.name_be-tarask=show
-nazvy_viosak.addr_country=skip
-nazvy_viosak.addr_region=skip
-nazvy_viosak.addr_district=skip
+nazvy_viosak.addr_country=show
+nazvy_viosak.addr_region=show
+nazvy_viosak.addr_district=show
+nazvy_viosak.admin_level=show
 #skip - show none
