--- a/nazvy/env.properties
+++ b/nazvy/env.properties
@@ -35,4 +35,5 @@ nazvy_viosak.addr_country=show
 nazvy_viosak.addr_region=show
 nazvy_viosak.addr_district=show
 nazvy_viosak.admin_level=show
+nazvy_viosak.type=show
 #skip - show none
